// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the error from the ToolbarStore 1`] = `
Array [
  <div
    class="snackbar error visible"
    role="button"
  >
    <span
      aria-label="su-exclamation-triangle"
      class="su-exclamation-triangle icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.error
      </strong>
       - Something went wrong
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <div
    class="snackbar warning"
    role="button"
  >
    <span
      aria-label="su-bell"
      class="su-bell icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.warning
      </strong>
       - 
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <nav
    class="toolbar light"
  >
    <div
      class="controls light grow"
    >
      <div
        class="itemsContainer"
      >
        <ul
          class="items light"
        />
      </div>
    </div>
    <div
      class="controls light"
    >
      <div
        class="icons light"
      >
        <div
          class="icon"
        >
          <p>
            Test1
          </p>
        </div>
        <div
          class="icon"
        >
          <p>
            Test2
          </p>
        </div>
      </div>
    </div>
  </nav>,
]
`;

exports[`Render the items and icons from the ToolbarStore 1`] = `
Array [
  <div
    class="snackbar error"
    role="button"
  >
    <span
      aria-label="su-exclamation-triangle"
      class="su-exclamation-triangle icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.error
      </strong>
       - 
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <div
    class="snackbar warning"
    role="button"
  >
    <span
      aria-label="su-bell"
      class="su-bell icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.warning
      </strong>
       - 
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <nav
    class="toolbar light"
  >
    <div
      class="controls light grow"
    >
      <div
        class="itemsContainer"
      >
        <ul
          class="items light"
        >
          <li>
            <button
              class="button light"
              disabled=""
            >
              <span
                aria-label="fa-trash-o"
                class="fa fa-trash-o icon"
              />
              <span
                class="label"
              >
                Delete
              </span>
            </button>
          </li>
          <li>
            <div
              class="dropdown"
            >
              <button
                class="button light"
              >
                <span
                  aria-label="fa-floppy-more"
                  class="fa fa-floppy-more icon"
                />
                <span
                  class="label"
                >
                  Save
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button light"
            >
              <span
                class="label"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch toggler"
                  >
                    <input
                      checked=""
                      type="checkbox"
                    />
                    <span />
                  </span>
                  <div>
                    Toggler
                  </div>
                </label>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="controls light"
    >
      <div
        class="icons light"
      >
        <div
          class="icon"
        >
          <p>
            Test1
          </p>
        </div>
        <div
          class="icon"
        >
          <p>
            Test2
          </p>
        </div>
      </div>
    </div>
  </nav>,
]
`;

exports[`Render the warning from the ToolbarStore 1`] = `
Array [
  <div
    class="snackbar error"
    role="button"
  >
    <span
      aria-label="su-exclamation-triangle"
      class="su-exclamation-triangle icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.error
      </strong>
       - 
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <div
    class="snackbar warning visible"
    role="button"
  >
    <span
      aria-label="su-bell"
      class="su-bell icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.warning
      </strong>
       - Something unimportant went wrong
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <nav
    class="toolbar light"
  >
    <div
      class="controls light grow"
    >
      <div
        class="itemsContainer"
      >
        <ul
          class="items light"
        />
      </div>
    </div>
    <div
      class="controls light"
    >
      <div
        class="icons light"
      >
        <div
          class="icon"
        >
          <p>
            Test1
          </p>
        </div>
        <div
          class="icon"
        >
          <p>
            Test2
          </p>
        </div>
      </div>
    </div>
  </nav>,
]
`;

exports[`Show success message on back button for some time 1`] = `
Array [
  <div
    class="snackbar error"
    role="button"
  >
    <span
      aria-label="su-exclamation-triangle"
      class="su-exclamation-triangle icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.error
      </strong>
       - 
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <div
    class="snackbar warning"
    role="button"
  >
    <span
      aria-label="su-bell"
      class="su-bell icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.warning
      </strong>
       - 
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <nav
    class="toolbar light"
  >
    <div
      class="controls light grow"
    >
      <button
        class="button light success"
      >
        <span
          aria-label="su-check"
          class="su-check icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items light"
        />
      </div>
    </div>
    <div
      class="controls light"
    />
  </nav>,
]
`;

exports[`Show success message on navigation button for some time 1`] = `
Array [
  <div
    class="snackbar error"
    role="button"
  >
    <span
      aria-label="su-exclamation-triangle"
      class="su-exclamation-triangle icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.error
      </strong>
       - 
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <div
    class="snackbar warning"
    role="button"
  >
    <span
      aria-label="su-bell"
      class="su-bell icon"
    />
    <div
      class="text"
    >
      <strong>
        sulu_admin.warning
      </strong>
       - 
    </div>
    <span
      aria-label="su-times"
      class="su-times clickable closeIcon"
      role="button"
      tabindex="0"
    />
  </div>,
  <nav
    class="toolbar light"
  >
    <div
      class="controls light grow"
    >
      <button
        class="button light primary success"
      >
        <span
          aria-label="su-check"
          class="su-check icon"
        />
      </button>
      <button
        class="button light"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items light"
        />
      </div>
    </div>
    <div
      class="controls light"
    />
  </nav>,
]
`;
